Update term and condition page

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -179,7 +179,7 @@
               <p>These Terms comply with the Cyber Security Act 2023 and the Data Protection Bill 2023 of Bangladesh and are supplemented by any service-specific terms, policies, or guidelines applicable to certain features or services on the Platform.</p>
 
               <h2>2. Acceptance of Terms</h2>
-              <p>Please read these Terms and Conditions thoroughly and carefully. These Terms, together with our Privacy Policy, Refund Policy, and any additional platform guidelines, form a legally binding agreement between Bizzmakr (“we,” “us,” or “our”) and you or the user (as defined in the Definitions section).</p>
+              <p>Please read these Terms and Conditions thoroughly and carefully. These Terms, together with our <a href="privacy-policy.html">Privacy Policy</a>, <a href="refund-policy.html"><a href="refund-policy.html">Refund Policy</a></a>, and any additional platform guidelines, form a legally binding agreement between Bizzmakr (“we,” “us,” or “our”) and you or the user (as defined in the Definitions section).</p>
               <p>By registering for an account, accessing, or using the Bizzmakr website, mobile application, or any related services (collectively referred to as the “Platform”), you confirm that:</p>
               <ol>
                   <li>You have read, understood, and agree to be bound by these Terms and all referenced policies.</li>
@@ -205,7 +205,7 @@
                   <li><strong>Escrow</strong> – A secure holding system within the Platform where funds from the Seeking Freelancer are stored until the agreed service is completed, approved, or canceled in accordance with our policies.</li>
                   <li><strong>Dispute</strong> – A formal process initiated by a Seeking Freelancer or Freelancer to address disagreements related to a service, transaction, or refund request, as outlined in our Dispute Resolution process.</li>
                   <li><strong>Platform</strong> – The Bizzmakr website, mobile application, and all related content, functionality, and services.</li>
-                  <li><strong>Policies</strong> – Collectively refers to these Terms and Conditions, the Privacy Policy, Refund Policy, and any service-specific guidelines published by Bizzmakr.</li>
+                  <li><strong>Policies</strong> – Collectively refers to these Terms and Conditions, the <a href="privacy-policy.html">Privacy Policy</a>, <a href="refund-policy.html">Refund Policy</a>, and any service-specific guidelines published by Bizzmakr.</li>
               </ul>
 
               <h2>4. Representations and Warranties</h2>
@@ -233,11 +233,11 @@
                   <li>Seeking Freelancers and Freelancers must not offer or accept payment outside the Bizzmakr Platform. All transactions must be processed through the Bizzmakr Wallet and Escrow system.</li>
                   <li>Unless otherwise agreed in writing between the Seeking Freelancer and the Freelancer, the Seeking Freelancer is granted full rights to the delivered work upon payment release, subject to the provisions and intellectual property rights in these Terms and Conditions.</li>
                   <li>Freelancers operate as independent contractors. Seeking Freelancers may not exercise direct control over how a Freelancer performs their work beyond what is necessary to define the scope, requirements, and deadlines of the project.</li>
-                  <li>Bizzmakr retains the right to use publicly available delivered work, which the Seeking Freelancer has agreed to publish, for marketing, promotional, or operational purposes, subject to our Privacy Policy.</li>
+                  <li>Bizzmakr retains the right to use publicly available delivered work, which the Seeking Freelancer has agreed to publish, for marketing, promotional, or operational purposes, subject to our <a href="privacy-policy.html">Privacy Policy</a>.</li>
               </ul>
 
               <h2>6. Refunds</h2>
-              <p>Refunds are processed in accordance with the Bizzmakr Refund Policy. Key terms include:</p>
+              <p>Refunds are processed in accordance with the Bizzmakr <a href="refund-policy.html">Refund Policy</a>. Key terms include:</p>
               <ul>
                   <li>Refund requests made within 24 hours of payment are reviewed and approved by the support team within 48 hours.</li>
                   <li>Refund requests made after 24 hours are subject to manual review. Decisions may take 48 hours or longer, depending on the complexity of the case.</li>
@@ -430,7 +430,7 @@
               <h2>13. Disputes and Cancellations</h2>
               <p>Bizzmakr encourages all Seeking Freelancers and Freelancers to first attempt to resolve any disagreements or issues directly with each other through clear and respectful communication on the Platform.</p>
               <p>If the parties are unable to reach a resolution on their own, either party may request Bizzmakr’s involvement. Our mediation team may then assist in facilitating a resolution in accordance with these Terms and Conditions.</p>
-              <p>Any cancellation of an order or milestone must follow the procedures outlined in our Refund Policy. Bizzmakr reserves the right to review the circumstances of the dispute or cancellation before making a final decision.</p>
+              <p>Any cancellation of an order or milestone must follow the procedures outlined in our <a href="refund-policy.html">Refund Policy</a>. Bizzmakr reserves the right to review the circumstances of the dispute or cancellation before making a final decision.</p>
 
               <h2>14. Content Moderation, Notices, and Appeals</h2>
               <h5>14.1 Content Monitoring</h3>
@@ -501,12 +501,12 @@
                   <li>Bizzmakr is under no obligation to implement, use, display, reproduce, or distribute any Feedback, and you have no right to compel such use or seek recognition if your Feedback is implemented.</li>
               </ul>
 
-              <h2>18. Privacy Policy</h2>
-              <p>Bizzmakr has established a Privacy Policy that explains how user information is collected, processed, stored, and shared. The Privacy Policy is incorporated by reference into these Terms and Conditions.</p>
-              <p>Your use of the Platform is governed by the Privacy Policy, and by using Bizzmakr, you acknowledge that you have read, understood, and agree to its terms.</p>
+              <h2>18. <a href="privacy-policy.html">Privacy Policy</a></h2>
+              <p>Bizzmakr has established a <a href="privacy-policy.html">Privacy Policy</a> that explains how user information is collected, processed, stored, and shared. The <a href="privacy-policy.html">Privacy Policy</a> is incorporated by reference into these Terms and Conditions.</p>
+              <p>Your use of the Platform is governed by the <a href="privacy-policy.html">Privacy Policy</a>, and by using Bizzmakr, you acknowledge that you have read, understood, and agree to its terms.</p>
 
               <h2>19. Additional Policies</h2>
-              <p>Your access to, use of, and participation in the Bizzmakr Platform is subject to these Terms and Conditions, as well as all applicable Bizzmakr regulations, guidelines, and additional policies that may be established from time to time. These include, without limitation, our Refund Policy, Privacy Policy, and any other restrictions or limitations published on the Platform (“Additional Policies”).</p>
+              <p>Your access to, use of, and participation in the Bizzmakr Platform is subject to these Terms and Conditions, as well as all applicable Bizzmakr regulations, guidelines, and additional policies that may be established from time to time. These include, without limitation, our <a href="refund-policy.html">Refund Policy</a>, <a href="privacy-policy.html">Privacy Policy</a>, and any other restrictions or limitations published on the Platform (“Additional Policies”).</p>
               <p>You agree to comply with all Additional Policies and your obligations under them at all times. Failure to adhere to any of the Terms and Conditions, including any referenced policies or eligibility criteria, may result in the suspension or termination of your account without prior notice, and Bizzmakr reserves the right to take legal action where necessary.</p>
 
               <h2>20. Member Conduct</h2>
@@ -614,7 +614,7 @@
               <ul>
                   <li>Sensitive user data is stored on secure servers located in Bangladesh.</li>
                   <li>We apply industry-standard security measures, including encryption, access controls, and regular security audits, to safeguard information.</li>
-                  <li>User data is shared only when required by law or as described in our Privacy Policy.</li>
+                  <li>User data is shared only when required by law or as described in our <a href="privacy-policy.html">Privacy Policy</a>.</li>
               </ul>
 
               <h2>24. Ownership and Intellectual Property Rights</h2>
@@ -721,7 +721,7 @@
                   <li>Content, profile information, or portfolio items may be removed at Bizzmakr’s discretion.</li>
               </ul>
               <h5>31.4 Data and Balances After Disablement</h3>
-              <p>Upon disablement, your access to the Platform, transaction history, and wallet balance may be permanently deleted or rendered inaccessible. Refunds, if applicable, will follow Bizzmakr’s Refund Policy and applicable financial regulations.</p>
+              <p>Upon disablement, your access to the Platform, transaction history, and wallet balance may be permanently deleted or rendered inaccessible. Refunds, if applicable, will follow Bizzmakr’s <a href="refund-policy.html">Refund Policy</a> and applicable financial regulations.</p>
               <h5>31.5 Appeals</h3>
               <p>If Bizzmakr takes action against your account, you will be notified by email, in-app notification, or both. You may request a review or appeal the decision within thirty (30) days of receiving the notice. Appeals will be handled fairly, but Bizzmakr reserves final decision-making authority.</p>
 
@@ -743,7 +743,7 @@
                   <li>Resolution of disputes or refund requests.</li>
                   <li>Compliance with legal and regulatory requirements.</li>
               </ul>
-              <p>Refunds and wallet balances will be handled strictly in accordance with Bizzmakr’s Refund Policy and Wallet System rules.</p>
+              <p>Refunds and wallet balances will be handled strictly in accordance with Bizzmakr’s <a href="refund-policy.html">Refund Policy</a> and Wallet System rules.</p>
               <h5>32.4 Use of Data Post-Termination</h3>
               <p>Bizzmakr may retain and use data collected from your account for compliance, dispute resolution, internal analysis, and archival purposes. Licenses you granted to Bizzmakr (such as for feedback or suggestions) will continue in effect for these purposes.</p>
               <h5>32.5 Notification</h3>
@@ -1013,7 +1013,7 @@
               <h5>43.2 Service Fees for Seeking Freelancers (Clients)</h3>
               <ul>
                   <li>Seeking Freelancers pay a 3% service charge on top of the freelancer’s project amount.</li>
-                  <li>This service fee is non-refundable and applies to all confirmed transactions unless otherwise stated in the Refund Policy.</li>
+                  <li>This service fee is non-refundable and applies to all confirmed transactions unless otherwise stated in the <a href="refund-policy.html">Refund Policy</a>.</li>
                   <li>Bizzmakr reserves the right, in its sole discretion, to revise or update the 3% service fee at any time.</li>
               </ul>
               <h5>43.3 Commission Fees for Freelancers</h3>
@@ -1037,7 +1037,7 @@
               </ul>
               <h5>43.6 Non-Refund of Fees</h3>
               <ul>
-                  <li>Fees paid to Bizzmakr, including service charges, commission fees, and payment method charges, are non-refundable unless explicitly covered under the Refund Policy.</li>
+                  <li>Fees paid to Bizzmakr, including service charges, commission fees, and payment method charges, are non-refundable unless explicitly covered under the <a href="refund-policy.html">Refund Policy</a>.</li>
               </ul>
               <h5>43.7 Legal Remedies</h3>
               <ul>
@@ -1077,7 +1077,7 @@
               <h2>47. General Information</h2>
               <h5>47.1 Entire Agreement</h3>
               <ul>
-                  <li>These Terms of Use, together with the Privacy Policy, Refund Policy, and any other legal notices or policies published by Bizzmakr on the Platform, constitute the entire agreement between you and Bizzmakr regarding the use of the Platform.</li>
+                  <li>These Terms of Use, together with the <a href="privacy-policy.html">Privacy Policy</a>, <a href="refund-policy.html">Refund Policy</a>, and any other legal notices or policies published by Bizzmakr on the Platform, constitute the entire agreement between you and Bizzmakr regarding the use of the Platform.</li>
               </ul>
               <h5>47.2 Severability</h3>
               <ul>
@@ -1166,7 +1166,7 @@
               <ul>
                   <li>Cookies are small text files stored on your device when you visit the Bizzmakr platform.</li>
                   <li>They enhance your experience by remembering preferences, enabling certain functions, and providing insights into platform performance and usage.</li>
-                  <li>Bizzmakr’s use of cookies is subject to its Privacy Policy.</li>
+                  <li>Bizzmakr’s use of cookies is subject to its <a href="privacy-policy.html">Privacy Policy</a>.</li>
               </ul>
               <h5>54.2 Managing Cookies</h3>
               <ul>
@@ -1209,7 +1209,7 @@
               <h2>56. Entire Agreement</h2>
               <h5>56.1 Superseding Effect</h3>
               <ul>
-                  <li>These Terms, together with the Privacy Policy, Refund Policy, and any other policies or notices incorporated by reference, constitute the entire agreement between you and Bizzmakr concerning your use of the Platform.</li>
+                  <li>These Terms, together with the <a href="privacy-policy.html">Privacy Policy</a>, <a href="refund-policy.html">Refund Policy</a>, and any other policies or notices incorporated by reference, constitute the entire agreement between you and Bizzmakr concerning your use of the Platform.</li>
                   <li>They supersede any prior agreements, understandings, or representations, whether written or oral, relating to the Platform or the services provided through it.</li>
               </ul>
               <h5>56.2 No Reliance on External Representations</h3>
@@ -1230,7 +1230,7 @@
                 <i class="uil uil-website"></i>
                 <p class="color2 mb-0"><b>Office&nbsp;:</b><a class="color2" href="https://bizzmakr.com">&nbsp;Jashore, Bangladesh</a></p>
               </div> -->
-              <p>Bizzmakr reserves the right to modify this Terms and Conditions at any time. Users will be notified of updates via email or platform notifications.</p>
+              <p>Bizzmakr reserves the right to modify this Terms and Conditions at any time.</p>
             </div>
             <!-- /column -->
           </div>
