--- a/how-it-works.html
+++ b/how-it-works.html
@@ -221,12 +221,12 @@
               </div>
               <p class="fw-bold fs-26 text-primary mb-5 d-none d-md-block" data-aos="fade-down" data-aos-delay="220">Start Your Journey Today</p>
               <div class="align-items-center gap-3 d-none d-md-flex" data-aos="fade-down" data-aos-delay="240">
-                <button class="btn m-0 p-0">
-                  <img src="./assets/img/Google-Play.svg" alt="" />
-                </button>
-                <button class="btn m-0 p-0">
-                  <img src="./assets/img/App-Store.png" alt="" />
-                </button>
+                <a class="btn m-0 p-0" href="https://play.google.com/store/apps/details?id=com.bizzzmakr.bizzmakr" target="_blank" rel="noopener">
+                  <img class="w-sm-17" src="./assets/img/Google-Play.svg" alt="Get it on Google Play" />
+                </a>
+                <a class="btn m-0 p-0" href="https://apps.apple.com/us/app/bizzmakr/id6745223152" target="_blank" rel="noopener">
+                  <img class="w-sm-17" src="./assets/img/App-Store.png" alt="Download on the App Store" />
+                </a>
               </div>
             </div>
             <!-- /column -->
