--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
                 <p class="fw-800 fs-sm-20 fs-24 lh-sm" data-aos="fade-down" data-aos-delay="200">Your Gateway to Limitless Opportunities</p>
                 <p class="fs-sm-16 fs-20 fw-light lh-sm mb-6" data-aos="fade-down" data-aos-delay="200">Bizzmakr connects exceptional Bangladeshi talent with transformative opportunities. As the leading local platform, we’re creating a vibrant freelance ecosystem designed to empower professionals and businesses alike, driving meaningful economic progress.</p>
                 <div class="d-flex align-items-center justify-content-center gap-3" data-aos="fade-down" data-aos-delay="250">
-                  <button class="btn m-0 p-0">
-                    <img class="w-sm-17" src="./assets/img/Google-Play.svg" alt="" />
-                  </button>
-                  <button class="btn m-0 p-0">
-                    <img class="w-sm-17" src="./assets/img/App-Store.png" alt="" />
-                  </button>
+                  <a class="btn m-0 p-0" href="https://play.google.com/store/apps/details?id=com.bizzzmakr.bizzmakr" target="_blank" rel="noopener">
+                    <img class="w-sm-17" src="./assets/img/Google-Play.svg" alt="Get it on Google Play" />
+                  </a>
+                  <a class="btn m-0 p-0" href="https://apps.apple.com/us/app/bizzmakr/id6745223152" target="_blank" rel="noopener">
+                    <img class="w-sm-17" src="./assets/img/App-Store.png" alt="Download on the App Store" />
+                  </a>
                 </div>
               </div>
               <!-- /column -->
@@ -254,12 +254,12 @@
               <p data-aos="fade-down" data-aos-delay="150">Bizzmakr’s filtering tools help users find the perfect freelancer or project in minutes, enhancing efficiency by reducing the time spent sifting through irrelevant options.</p>
               <p class="fw-bold text-primary fs-26" data-aos="fade-down" data-aos-delay="200">Start Your Journey Today</p>
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start gap-3" data-aos="fade-down" data-aos-delay="200">
-                <button class="btn m-0 p-0">
-                  <img src="./assets/img/Google-Play.svg" alt="" />
-                </button>
-                <button class="btn m-0 p-0">
-                  <img src="./assets/img/App-Store.png" alt="" />
-                </button>
+                <a class="btn m-0 p-0" href="https://play.google.com/store/apps/details?id=com.bizzzmakr.bizzmakr" target="_blank" rel="noopener">
+                  <img class="w-sm-17" src="./assets/img/Google-Play.svg" alt="Get it on Google Play" />
+                </a>
+                <a class="btn m-0 p-0" href="https://apps.apple.com/us/app/bizzmakr/id6745223152" target="_blank" rel="noopener">
+                  <img class="w-sm-17" src="./assets/img/App-Store.png" alt="Download on the App Store" />
+                </a>
               </div>
             </div>
           </div>
