--- a/features.html
+++ b/features.html
@@ -31,7 +31,8 @@
           <div class="container flex-lg-row flex-nowrap align-items-center">
             <div class="navbar-brand w-100">
               <a href="./">
-                <img class="h-10" src="./assets/img/logo-old.png" alt="company logo" />
+                <h1 class="nav-logo my-auto">Bizzmakr</h1>
+                <!-- <img class="h-10" src="./assets/img/logo-old.png" alt="company logo" /> -->
               </a>
             </div>
             <div class="navbar-collapse offcanvas-nav">
