--- a/tutorials.html
+++ b/tutorials.html
@@ -51,11 +51,12 @@
           <div class="container flex-lg-row flex-nowrap align-items-center">
             <div class="navbar-brand w-100">
               <a href="./">
-                <img
+                <h1 class="nav-logo my-auto">Bizzmakr</h1>
+                <!-- <img
                   class="h-10"
                   src="./assets/img/logo-old.png"
                   alt="company logo"
-                />
+                /> -->
               </a>
             </div>
             <div class="navbar-collapse offcanvas-nav">
