Add the tutorial link in the hamburger menu in mobile screen

--- a/tutorials.html
+++ b/tutorials.html
@@ -237,7 +237,7 @@
                         fill="#30B0FF"
                       />
                     </svg>
-                    <a href="" class="text-black text-decoration-none fs-14"
+                    <a href="tutorials.html" class="text-black text-decoration-none fs-14"
                       >Check the link</a
                     >
                   </div>
