--- a/pricing.html
+++ b/pricing.html
@@ -226,11 +226,13 @@
               <div class="" data-aos="fade-down" data-aos-delay="100">
                 <ul>
                   <li class="d-flex align-items-center gap-1 mb-2">
-                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <circle cx="9" cy="9" r="8" stroke="#30B0FF" stroke-width="2" fill="none" />
-                      <path d="M6 9l2 2 4-4" stroke="#30B0FF" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                    <span>Free to sign up for freelancers and businesses</span>
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="9" cy="9" r="8" stroke="#30B0FF" stroke-width="2" fill="none" />
+                        <path d="M6 9l2 2 4-4" stroke="#30B0FF" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Free to sign up for freelancers and businesses
+                    </span>
                   </li>
                   <li class="d-flex align-items-center gap-1 mb-2">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
