Fix Why We Stand Out: to Why We Stand Out? and Innovate.Empower.Transform. to Innovate Empower Transform

--- a/about-us.html
+++ b/about-us.html
@@ -155,7 +155,7 @@
           <div class="container py-8 py-lg-12">
             <div class="row align-items-center text-center">
               <div class="col-12">
-                <h1 class="sub-title fw-800 mb-2" data-aos="fade-down" data-aos-delay="100">Innovate.<br class="d-block d-md-none" />Empower.<br class="d-block d-md-none" />Transform.</h1>
+                <h1 class="sub-title fw-800 mb-2" data-aos="fade-down" data-aos-delay="100">Innovate <br class="d-block d-md-none" />Empower <br class="d-block d-md-none" />Transform</h1>
                 <p class="lh-sm mb-0 px-lg-6" data-aos="fade-down" data-aos-delay="200">Bizzmakr is Bangladesh’s leading freelancing platform, connecting skilled professionals with businesses to create opportunities that inspire growth and tackle unemployment.</p>
               </div>
               <!-- /column -->
@@ -172,7 +172,7 @@
             <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 mx-auto text-center">
               <h2 class="sub-title mb-3" data-aos="fade-down" data-aos-delay="100">
                 Why We <br class="d-block d-md-none" />
-                Stand Out:
+                Stand Out?
               </h2>
               <p class="mb-10" data-aos="fade-down" data-aos-delay="200">By empowering freelancers to earn in local currency and providing businesses with affordable, high-quality solutions, we’re building a thriving ecosystem of innovation and success—uplifting communities across the nation.</p>
             </div>
