--- a/refund-policy.html
+++ b/refund-policy.html
@@ -37,7 +37,9 @@
             </div>
             <div class="navbar-collapse offcanvas-nav">
               <div class="offcanvas-header d-lg-none d-xl-none">
-                <a href="./"><img src="./assets/img/logo-mobile.png" alt="" /></a>
+                <a href="./">
+                  <h1 class="nav-logo-hamburger my-auto">Bizzmakr</h1>
+                </a>
                 <button type="button" class="btn-close btn-close-dark offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
               </div>
               <ul class="navbar-nav">
