--- a/tutorials.html
+++ b/tutorials.html
@@ -61,9 +61,9 @@
             </div>
             <div class="navbar-collapse offcanvas-nav">
               <div class="offcanvas-header d-lg-none d-xl-none">
-                <a href="./"
-                  ><img src="./assets/img/logo-mobile.png" alt=""
-                /></a>
+                <a href="./">
+                  <h1 class="nav-logo-hamburger my-auto">Bizzmakr</h1>
+                </a>
                 <button
                   type="button"
                   class="btn-close btn-close-dark offcanvas-close offcanvas-nav-close"
