Remove full stop from the features page

--- a/features.html
+++ b/features.html
@@ -177,7 +177,7 @@
               <div class="bg-primary px-3 py-1 mb-2 rounded-pill">
                 <p class="mb-0 fw-600 fs-18 lh-xs py-1 text-center text-white">Smart Talent Matching</p>
               </div>
-              <p class="mb-4 fw-light">Easily find the right freelancer or project with our advanced algorithms and swiping mechanism, saving you time and effort.</p>
+              <p class="mb-4 fw-light">Easily find the right freelancer or project with our advanced algorithms and swiping mechanism, saving you time and effort</p>
 
               <div class="bg-primary px-3 py-1 mb-2 rounded-pill">
                 <p class="mb-0 fw-600 fs-18 lh-xs py-1 text-center text-white">Local Currency Support</p>
@@ -196,7 +196,7 @@
               <div class="bg-primary px-3 py-1 mb-2 rounded-pill">
                 <p class="mb-0 fw-600 fs-18 lh-xs py-1 text-center text-white">Real-Time Communication</p>
               </div>
-              <p class="mb-4 fw-light">Engage directly through built-in messaging and calling features for smooth and effective collaboration.</p>
+              <p class="mb-4 fw-light">Engage directly through built-in messaging and calling features for smooth and effective collaboration</p>
 
               <div class="bg-primary px-3 py-1 mb-2 rounded-pill">
                 <p class="mb-0 fw-600 fs-18 lh-xs py-1 text-center text-white">Milestone-Based Payments</p>
