Fix the back to top button's position

--- a/pricing.html
+++ b/pricing.html
@@ -207,7 +207,7 @@
             <!-- /column -->
             <div class="col-lg-6">
               <h2 class="lh-xs ls-sm mb-3 sub-title" data-aos="fade-down" data-aos-delay="100">Connect.Collaborate. Conquer.</h2>
-              <p class="mb-10" data-aos="fade-down" data-aos-delay="120">Freelancers pay just 7% commission on earnings.</p>
+              <p class="mb-10" data-aos="fade-down" data-aos-delay="120">Freelancers pay just 7% commission on earnings</p>
             </div>
             <!-- /column -->
           </div>
