--- a/about-us.html
+++ b/about-us.html
@@ -188,7 +188,7 @@
                 <div class="bg-primary px-3 py-1 mb-2 rounded-pill">
                   <p class="mb-0 fw-600 fs-18 text-center text-white">For Our People</p>
                 </div>
-                <p class="mb-0 fw-light">Empowering local freelancers to showcase their skills and earn in their currency.</p>
+                <p class="mb-0 fw-light">Empowering local freelancers to showcase their skills and earn in their currency</p>
               </div>
             </div>
             <!--/column -->
