--- a/how-it-works.html
+++ b/how-it-works.html
@@ -265,7 +265,7 @@
         <div class="container pb-8 pb-lg-12">
           <div class="row justify-content-center text-center">
             <div class="col-lg-10">
-              <h2 class="sub-title lh-xs mb-5" data-aos="fade-down" data-aos-delay="100">Connect with verified, <span class="text-primary">top-tier freelancers.</span></h2>
+              <h2 class="sub-title lh-xs mb-5" data-aos="fade-down" data-aos-delay="100">Connect with verified, <span class="text-primary">top-tier freelancers</span></h2>
               <p class="fs-18 bg-primary rounded-pill text-white fw-600 lh-xs px-3 py-1" data-aos="fade-down" data-aos-delay="180">Manage projects from start to finish within our platform.</p>
             </div>
             <div class="col-12">
