Update refund policy and terms

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -454,7 +454,7 @@
               <p><strong>Email:</strong> <a href="mailto:support@bizzmakr.com">support@bizzmakr.com</a></p>
               <p><strong>Website:</strong> <a href="https://www.bizzmakr.com/">bizzmakr.com</a></p>
 
-              <p>Bizzmakr reserves the right to modify this Refund Policy at any time. Users will be notified of updates via email or platform notifications.</p>
+              <p>Bizzmakr reserves the right to modify this Refund Policy at any time. We encourage you to review this Refund Policy periodically to stay informed.</p>
             </div>
             <!-- /column -->
           </div>
