--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -186,7 +186,7 @@
               <p>By registering for an account, accessing, or using the Bizzmakr website, mobile application, or any related services (collectively referred to as the “Platform”), you confirm that:</p>
               <ol>
                   <li>You have read, understood, and agree to be bound by these Terms and all referenced policies.</li>
-                  <li>You are at least 18 years old and legally competent to enter into a binding and enforceable contract under applicable laws.</li>
+                  <li>You are at least 18 years old and legally competent to enter into a binding and enforceable contract under applicable laws, or you are between 13 and 17 years old and have obtained verified parental or guardian consent to use the Platform. Users under 13 years of age are strictly prohibited from using the Platform.</li>
                   <li>You are either a Seeking Freelancer (client) or a Freelancer (service provider) using the Platform for legitimate purposes.</li>
                   <li>You authorize the processing of payments, refunds, withdrawals, and other transactions in accordance with these Terms.</li>
               </ol>
@@ -214,7 +214,7 @@
               <h2>4. Representations and Warranties</h2>
               <p>By registering, accessing, or using the Bizzmakr Platform, you represent and warrant that:</p>
               <ol>
-                  <li>You are at least 18 years old and legally competent to enter into a binding and enforceable contract under applicable laws.</li>
+                  <li>You are at least 18 years old and legally competent to enter into a binding and enforceable contract under applicable laws, or you are between 13 and 17 years old and have obtained verified parental or guardian consent to use the Platform. Users under 13 years of age are strictly prohibited from using the Platform.</li>
                   <li>You are not subject to any economic sanctions, trade restrictions, or prohibitions imposed by Bangladesh, the United States, the European Union, or any other applicable jurisdiction.</li>
                   <li>You are using the Platform in compliance with all applicable laws, regulations, and industry standards in your jurisdiction.</li>
                   <li>All information you provide during registration and use of the Platform is truthful, accurate, and complete, and you will maintain its accuracy at all times.</li>
@@ -226,7 +226,7 @@
               <h2>5. Overview</h2>
               <ul>
                   <li>Only registered users may post, request, or deliver services on Bizzmakr. When registering for an account, you must:</li>
-                  <li>Be at least 18 years old and legally competent to enter into a binding contract.</li>
+                  <li>Be at least 18 years old and legally competent to enter into a binding contract, or be between 13 and 17 years old with verified parental or guardian consent. Users under 13 years of age are not permitted to use the Platform.</li>
                   <li>Provide accurate, complete, and up-to-date information about yourself or your business.</li>
                   <li>Keep your account details updated without undue delay.</li>
                   <li>Not create an account for fraudulent, misleading, or unlawful purposes.</li>
@@ -471,10 +471,16 @@
               <h5>15.3 Intellectual Property Enforcement</h3>
               <p>Any unauthorized use, reproduction, or modification of Bizzmakr’s name, logos, trademarks, or any component of the Platform is strictly prohibited. Bizzmakr reserves the right to take all appropriate legal action, including seeking damages, costs, and injunctive relief, against any unauthorized use or infringement.</p>
               <h5>15.4 Membership Eligibility and Account Responsibilities</h3>
-              <p>Use of the Platform is only available to individuals who are at least 18 years old and capable of entering into legally binding contracts under applicable law. By creating an account, you represent and warrant that:</p>
+              <p>Use of the Platform is only available to individuals who are:</p>
               <ul>
-                  <li>You are at least 18 years old.</li>
-                  <li>All registration information provided is truthful, accurate, current, and complete.</li>
+                  <li>At least 18 years old and legally competent to enter into binding contracts under applicable law; or</li>
+                  <li>Between 13 and 17 years old with verified parental or guardian consent.</li>
+                  <li>Users under the age of 13 are strictly prohibited from creating an account or using the Platform.</li>
+              </ul>
+              <p>By creating an account, you represent and warrant that:</p>
+              <ul>
+                  <li>You are at least 18 years old, or you are between 13 and 17 years old and have obtained parental or guardian consent.</li>
+                  <li>All registration information you provide is truthful, accurate, current, and complete.</li>
                   <li>You will maintain and update such information to remain accurate and current.</li>
               </ul>
               <p>You are solely responsible for safeguarding your account credentials and for all activities conducted under your account. Unauthorized use of another user’s account, or allowing others to use your account without authorization, is strictly prohibited and may result in account termination and legal liability.</p>
@@ -1152,74 +1158,75 @@
               <h2>52. Severability</h2>
               <p>If any provision of these Terms is determined to be unlawful, void, or unenforceable, that provision shall still be enforced to the fullest extent permitted by law. The unenforceable portion shall be deemed severed from these Terms, and such a determination will not affect the validity or enforceability of the remaining provisions.</p>
 
-              <h2>53. Contact</h2>
-              <h5>53.1 General Inquiries</h3>
-              <ul>
-                  <li>For more information regarding these Terms of Use, or if you have any queries, concerns, or feedback, you may contact Bizzmakr.</li>
-              </ul>
-              <h5>53.2 Support & Legal Inquiries</h3>
-              <ul>
-                  <li>For questions, compliance issues, legal matters, or account concerns, please reach us at:</li>
-                  <li>Email: <a href="mailto:support@bizzmakr.com">support@bizzmakr.com</a></li>
-                  <li>Website: <a href="https://bizzmakr.com">https://bizzmakr.com</a></li>
-              </ul>
-
-              <h2>54. Acceptance of Cookies</h2>
-              <h5>54.1 What Are Cookies</h3>
+              <h2>53. Acceptance of Cookies</h2>
+              <h5>53.1 What Are Cookies</h3>
               <ul>
                   <li>Cookies are small text files stored on your device when you visit the Bizzmakr platform.</li>
                   <li>They enhance your experience by remembering preferences, enabling certain functions, and providing insights into platform performance and usage.</li>
                   <li>Bizzmakr’s use of cookies is subject to its <a href="privacy-policy.html">Privacy Policy</a>.</li>
               </ul>
-              <h5>54.2 Managing Cookies</h3>
+              <h5>53.2 Managing Cookies</h3>
               <ul>
                   <li>You can manage or control cookies through your browser settings.</li>
                   <li>Most browsers allow you to block or delete cookies, but disabling them may affect the performance and functionality of the platform.</li>
               </ul>
-              <h5>54.3 Consent</h3>
+              <h5>53.3 Consent</h3>
               <ul>
                   <li>By accepting these Terms and continuing to use the platform, you consent to our use of cookies as described.</li>
                   <li>If you do not agree, you should adjust your browser settings or discontinue use of the platform.</li>
               </ul>
-              <h5>54.4 Third-Party Cookies</h3>
+              <h5>53.4 Third-Party Cookies</h3>
               <ul>
                   <li>The Bizzmakr platform may contain links to third-party websites or services.</li>
                   <li>Bizzmakr does not control whether such websites use cookies and is not responsible for their practices.</li>
                   <li>Users are encouraged to review the cookie policies of any third-party websites they visit through the platform.</li>
                   <li>Bizzmakr shall not be held liable for any loss, damage, or issues arising from the use of cookies by third-party websites or services.</li>
               </ul>
-              <h5>54.5 Updates to Cookie Policy</h3>
+              <h5>53.5 Updates to Cookie Policy</h3>
               <ul>
                   <li>Bizzmakr may update this Cookie Policy from time to time.</li>
                   <li>Any updates will be reflected in these Terms, and your continued use of the platform will constitute acceptance of such updates.</li>
               </ul>
 
-              <h2>55. Assignment</h2>
-              <h5>55.1 Binding Effect</h3>
+              <h2>54. Assignment</h2>
+              <h5>54.1 Binding Effect</h3>
               <ul>
                   <li>These Terms are binding upon and shall inure to the benefit of Bizzmakr, its successors, permitted assigns, and legal representatives, as well as users and their respective successors and legal representatives.</li>
               </ul>
-              <h5>55.2 Assignment by Bizzmakr</h3>
+              <h5>54.2 Assignment by Bizzmakr</h3>
               <ul>
                   <li>Bizzmakr may assign or transfer its rights and/or obligations under these Terms at its sole discretion, without requiring user consent or prior notice, unless otherwise required by applicable law.</li>
               </ul>
-              <h5>55.3 Assignment by Users</h3>
+              <h5>54.3 Assignment by Users</h3>
               <ul>
                   <li>Users may not assign, delegate, or transfer any of their rights or obligations under these Terms without the prior written consent of Bizzmakr.</li>
                   <li>Any attempted assignment or transfer without such consent shall be considered null and void.</li>
               </ul>
 
-              <h2>56. Entire Agreement</h2>
-              <h5>56.1 Superseding Effect</h3>
+              <h2>55. Entire Agreement</h2>
+              <h5>55.1 Superseding Effect</h3>
               <ul>
                   <li>These Terms, together with the <a href="privacy-policy.html">Privacy Policy</a>, <a href="refund-policy.html">Refund Policy</a>, and any other policies or notices incorporated by reference, constitute the entire agreement between you and Bizzmakr concerning your use of the Platform.</li>
                   <li>They supersede any prior agreements, understandings, or representations, whether written or oral, relating to the Platform or the services provided through it.</li>
               </ul>
-              <h5>56.2 No Reliance on External Representations</h3>
+              <h5>55.2 No Reliance on External Representations</h3>
               <ul>
                   <li>Users acknowledge that they have not relied on any statement, promise, or representation not expressly set out in these Terms or related policies.</li>
               </ul>
 
+              <h2>56. Contact</h2>
+              <h5>56.1 General Inquiries</h3>
+              <ul>
+                  <li>For more information regarding these Terms of Use, or if you have any queries, concerns, or feedback, you may contact Bizzmakr.</li>
+              </ul>
+              <h5>56.2 Support & Legal Inquiries</h3>
+              <ul>
+                  <li>For questions, compliance issues, legal matters, or account concerns, please reach us at:</li>
+                  <li>Email: <a href="mailto:support@bizzmakr.com">support@bizzmakr.com</a></li>
+                  <li>Website: <a href="https://bizzmakr.com">https://bizzmakr.com</a></li>
+              </ul>
+
+              <br>
               <p>For further inquiries regarding Terms and Conditions, contact:</p>
               <div class="d-flex align-items-center gap-2">
                 <i class="uil uil-mail"></i>
